adding missing files

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   }
   document.write('\x3Cscript src="/socket.io/socket.io.js">\x3C/script>');  
 </script>
+<script src="/js/lib/pixi.min.js"></script>
 <script src="/js/lib/jquery-2.1.4.min.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/pixi.main.js"></script>
 </body>
 </html>
