--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
+  <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -28,6 +29,7 @@
 </script>
 <script src="/js/lib/pixi.min.js"></script>
 <script src="/js/lib/jquery-2.1.4.min.js"></script>
+<script src="js/lib/lettering.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/pixi.main.js"></script>
 </body>
